--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -36,7 +36,9 @@
 </div>
 
 <footer class="container-fluid text-center">
-    <p>Copyright © <span id="year"></span> Bernadette Engleman. All rights reserved.</p>
+    <div>
+        <p>Copyright © <span id="year"></span> Bernadette Engleman. All rights reserved.</p>
+    </div>
 </footer>
 
 <script type="text/javascript" src="cookie.js"></script>
@@ -44,4 +46,3 @@
 </body>
 
 </html>
-
