--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -15,6 +15,7 @@
 
 <body>
 
+<!-- Home -->
 <nav class="navbar">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -22,7 +23,7 @@
             <a class="navbar-brand" href="fortunecookie.html">Get another fortune cookie</a></p>
         </div>
     </div>
-</nav><!-- Home -->
+</nav>
 
 
 <div class="container">
@@ -46,3 +47,4 @@
 </body>
 
 </html>
+
