--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -14,18 +14,22 @@
 
 <body>
 
-<!-- Home -->
+<!-- Home Link -->
 <nav class="navbar container-fluid">
     <div class="navbar-header">
-        <p id="topFont"><a class="navbar-brand" href="http://www.bernadetteengleman.com/" id="home">Home</a>
+        <p id="topFont"><a class="navbar-brand" href="http://www.bernadetteengleman.com/" id="home">Home</a></p>
     </div>
 </nav>
 
 <main class="container">
 
+    <!-- Title / Instruction -->
     <h1 class="text-center" id="titleFont">Click Fortune Cookie</h1>
+
+    <!-- Cookie Image -->
     <img src="cookie.jpg" alt="fortune cookie" id="fortune">
 
+    <!-- Quote Line -->
     <p id="show" class="messageFont text-center"></p>
 
 </main>
