--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -16,18 +16,16 @@
 
 <!-- Home Link -->
 <nav class="navbar container-fluid">
-    <div class="navbar-header">
-        <p id="topFont"><a class="navbar-brand" href="http://www.bernadetteengleman.com/" id="home">Home</a></p>
-    </div>
+    <a class="navbar-brand" href="http://www.bernadetteengleman.com/">Home</a>
 </nav>
 
 <main class="container">
 
     <!-- Title / Instruction -->
-    <h1 class="text-center" id="titleFont">Click Fortune Cookie</h1>
+    <h1 class="text-center titleFont">Click Fortune Cookie</h1>
 
     <!-- Cookie Image -->
-    <img src="cookie.jpg" alt="fortune cookie" id="fortune">
+    <img src="cookie.jpg" alt="fortune cookie" class="fortune">
 
     <!-- Quote Line -->
     <p id="show" class="messageFont text-center"></p>
