--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -28,7 +28,7 @@
     <img src="cookie.jpg" alt="fortune cookie" class="fortune">
 
     <!-- Quote Line -->
-    <p id="show" class="messageFont text-center"></p>
+    <p id="show" class="text-center"></p>
 
 </main>
 
