--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Fortune Cookie</title>
+    <meta name="description" content="fortune cookie shows a random quote">
+    <meta name="keywords" content="fortune cookie, random quote, qoute machine">
     <meta name="author" content="Bernadette Engleman">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheet.css">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <title>Fortune Cookie</title>
 </head>
 
 <body>
