--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -26,7 +26,7 @@
     <h1 class="text-center titleFont">Click Fortune Cookie</h1>
 
     <!-- Cookie Image -->
-    <img src="cookie.jpg" alt="fortune cookie" width="200" class="fortune">
+    <img src="img/cookie.jpg" alt="fortune cookie" width="200" class="fortune">
 
     <!-- Quote Line -->
     <p id="show" class="text-center"></p>
