--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -9,6 +9,7 @@
     <meta name="description" content="fortune cookie shows a random quote">
     <meta name="keywords" content="fortune cookie, random quote, qoute machine">
     <meta name="author" content="Bernadette Engleman">
+    <link rel="shortcut icon" href="../../img/beIcon.png">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheet.css">
 </head>
@@ -17,20 +18,18 @@
 
 <!-- Home Link -->
 <nav class="navbar container-fluid">
-    <a class="navbar-brand" href="http://www.bernadetteengleman.com/">Home</a>
+    <a class="navbar-brand" href="../../index.html">Home</a>
 </nav>
 
-<main class="container">
-
+<main class="container text-center">
     <!-- Title / Instruction -->
-    <h1 class="text-center titleFont">Click Fortune Cookie</h1>
+    <h1 class="titleFont">Click Fortune Cookie</h1>
 
     <!-- Cookie Image -->
     <img src="img/cookie.jpg" alt="fortune cookie" width="200" class="fortune">
 
     <!-- Quote Line -->
-    <p id="show" class="text-center"></p>
-
+    <p id="show"></p>
 </main>
 
 <footer class="container-fluid text-center">
