--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fortune Cookie</title>
+    <title>Fortune Cookie | Bernadette Engleman</title>
     <meta name="description" content="fortune cookie shows a random quote">
     <meta name="keywords" content="fortune cookie, random quote, qoute machine">
     <meta name="author" content="Bernadette Engleman">
@@ -33,7 +33,7 @@
 </main>
 
 <footer class="container-fluid text-center">
-    <p><small>Copyright © <span id="year"></span> Bernadette Engleman. All rights reserved.</small></p>
+    <p><small>Copyright © 2015-<span id="year"></span> Bernadette Engleman. All rights reserved.</small></p>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
