updated js script src

--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -26,7 +26,7 @@
     <h1 class="titleFont">Click Fortune Cookie</h1>
 
     <!-- Cookie Image -->
-    <img src="img/cookie.jpg" alt="fortune cookie" width="200" class="fortune">
+    <img src="img/cookie.jpg" alt="fortune cookie" width="200" id="fortune">
 
     <!-- Quote Line -->
     <p id="show"></p>
@@ -38,7 +38,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="cookie.js"></script>
+<script src="script.js"></script>
 
 </body>
 
