--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fortune Cookie | Bernadette Engleman</title>
+    <title>Fortune Cookie | Bernadette Estacio</title>
     <meta name="description" content="fortune cookie shows a random quote">
     <meta name="keywords" content="fortune cookie, random quote, qoute machine">
-    <meta name="author" content="Bernadette Engleman">
+    <meta name="author" content="Bernadette Estacio">
     <link rel="shortcut icon" href="../../img/beIcon.png">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheet.css">
@@ -33,7 +33,7 @@
 </main>
 
 <footer class="container-fluid text-center">
-    <p><small>Copyright © 2015-<span id="year"></span> Bernadette Engleman. All rights reserved.</small></p>
+    <p><small>Copyright © 2015-<span id="year"></span> Bernadette Estacio. All rights reserved.</small></p>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
